# ai-anime-discovery

./: .env.example  .gitignore  CLAUDE.md  README.md  prompt.md  render.yaml
.github/workflows/: eval.yml
app/: layout.tsx
backend/: .gitignore  pyproject.toml
backend/app/: main.py
backend/app/core/: anilist_client.py  auth.py  cache.py  config.py  db.py  google_client.py  index.py  mal_client.py  session.py
backend/app/models/: chat.py  feedback.py  recommend.py
backend/app/providers/: base.py  factory.py  openai_provider.py
backend/app/routers/: anime.py  auth.py  chat.py  digest.py  duo.py  feedback.py  google_auth.py  health.py  list.py  mal.py  mal_auth.py  recommend.py  seasonal.py  shares.py  taste.py  watchlist.py
backend/app/services/: chat_agent.py  digest.py  duo.py  feedback.py  history.py  profile.py  recommend.py  seasonal.py  shares.py  taste.py  users.py  watchlist.py
backend/scripts/: build_index.py  eval.py  sanity_check.py
frontend/: middleware.ts  next.config.ts  package-lock.json  package.json
frontend/app/: globals.css  layout.tsx  page.tsx  providers.tsx
frontend/app/chat/: page.tsx
frontend/components/: AddToAniListButton.tsx  AddToMALButton.tsx  AddToWatchlistButton.tsx  AnimeCard.tsx  Background3D.tsx  ConnectAniListBanner.tsx  ConnectToDiscoverBanner.tsx  FeedbackButtons.tsx  FilterBar.tsx  InviteFriendButton.tsx  NavBar.tsx  PreferencesForm.tsx  ResultsGrid.tsx  ShareButton.tsx  ShareDigestButton.tsx  ShareWatchlistButton.tsx
frontend/lib/: backendUrl.ts  config.ts
lib/stores/: preferences.ts
(+26 files in other folders)
