[project]
name = "anime-discovery-backend"
version = "0.1.0"
description = "FastAPI backend for Anime Discovery — embeddings, recommendations, MAL proxy"
requires-python = ">=3.13"
dependencies = [
    "faiss-cpu>=1.14.3",
    "fastapi>=0.137.1",
    "langchain>=1.3.9",
    "langgraph>=1.2.5",
    "langsmith>=0.8.16",
    "motor>=3.7.1",
    "openai>=2.41.1",
    "python-dotenv>=1.2.2",
    "tavily-python>=0.7.26",
    "uvicorn[standard]>=0.49.0",
]

[project.scripts]
build-index = "scripts.build_index:main"
eval = "scripts.eval:main"
